<resources>
    <string name="aware_category_display" />
    <string name="aware_category_gesture" />
    <string name="aware_display_settings_title">Idle lock screen</string>
    <string name="aware_settings_description" />
    <string name="aware_settings_summary" />
    <string name="aware_settings_title">Aware Settings</string>
    <string name="advanced_battery_graph_subtext">Battery left estimate is based on your device usage</string>
    <string name="gesture_silence_title">Silence alerts gesture</string>
    <string name="gesture_skip_title">Skip gesture</string>
    <string name="gesture_tap_title">Tap Gesture</string>
    <string name="keywords_touch_sensitivity">touch, sensitivity, sensitive, screen protector, film, responsive, responsiveness</string>
    <string name="keywords_wake_display" />
    <string name="touch_sensitivity_summary">Increase touch sensitivity and improve touch when using a screen protector</string>
    <string name="touch_sensitivity_title">Screen protector mode</string>
    <string name="columbus_title">Quick Tap to start actions</string>
    <string name="accessibility_keyboard_haptics_title">Keyboard haptics</string>
    <string name="adaptive_battery_switch_des">To extend battery life, Adaptive Battery may reduce performance and background activity. Some notifications may be delayed.</string>
    <string name="adaptive_battery_switch_title">Use Adaptive Battery</string>
    <string name="account_confirmation_class">com.google.android.gms.auth.uiflows.factoryreset.PreFactoryResetActivity</string>
    <string name="account_confirmation_package">com.google.android.gms</string>
    <string name="account_type">com.google</string>
    <string name="adaptive_alert_vibration_summary">Reduces vibration strength while your phone is still and the screen is facing up</string>
    <string name="adaptive_alert_vibration_title">Adaptive alert vibration</string>
    <string name="adaptive_charging">Adaptive Charging</string>
    <string name="adaptive_charging_title">Adaptive Charging</string>
    <string name="adaptive_charging_description">Extend battery lifespan by charging steadily during longer charging periods. Activated based on your usage cycle.</string>
    <string name="adaptive_charging_footer">To help extend battery lifespan, your phone learns your charging routine and waits until you need it to fully charge.</string>
    <string name="adaptive_charging_link_a11y">Learn more about Adaptive Charging</string>
    <string name="adaptive_charging_main_switch_title">Use Adaptive Charging</string>
    <string name="adaptive_charging_time_estimate"><b>Adaptive Charging</b> • Full by %1$s</string>
    <string name="ambient_display_wake_screen_footer"><annotation link="link">Preferences</annotation></string>
    <string name="ambient_display_wake_screen_summary" />
    <string name="add_bypassed_application_hint">No apps added</string>
    <string name="advanced_vpn_preference_group_title">Built-in</string>
    <string name="all_apps_category_title">All apps</string>
    <string name="allow_debugging_data_description">Google uses bug reports to diagnose app and device issues in accordance with our <a href="https://policies.google.com/privacy">Privacy Policy</a>".

"<b>Bug reports contain app and system logs</b>" and may include personal and device information, such as names, email addresses, phone numbers, location data, device identifiers, connected devices, and network information. Reports may be shared with engineering partners potentially impacted by your issue.

Granting access will allow this app to "<b>automatically collect and upload bug reports</b>" containing app and system logs for all issue reports.

Revoking access will require the app to request your permission to collect and upload a bug report for each individual issue report."</string>
    <string name="ambient_display_wake_screen_summary_on" />
    <string name="app_and_notification_dashboard_summary">Assistant, recent apps, default apps</string>
    <string name="automatic_storage_manager_activation_warning">"When you're connected, you can still access photos and videos at the quality you selected for backup"</string>
    <string name="automatic_storage_manager_days_title">Remove backed up photos &amp; videos</string>
    <string name="automatic_storage_manager_deactivation_warning">"Turn off Smart Storage? 

Smart Storage won't free up space when your storage is almost full."</string>
    <string name="automatic_storage_manager_downloads_days_title">Backed up downloads</string>
    <string name="automatic_storage_manager_preference_title">Smart Storage</string>
    <string name="automatic_storage_manager_primary_switch_title">Use Smart Storage</string>
    <string name="automatic_storage_manager_settings">Smart Storage</string>
    <string name="automatic_storage_manager_text">When storage is almost full, remove backed up photos and videos. You can still find them in Google Photos.</string>
    <string name="aware_category_security" />
    <string name="aware_disabled_preference_action">Turn on</string>
    <string name="aware_disabled_preference_dialog_content" />
    <string name="aware_disabled_preference_dialog_title" />
    <string name="aware_disabled_preference_neutral">Not now</string>
    <string name="aware_footer_when_airplane_batterysaver_on">Motion Sense is unavailable because airplane mode and Battery Saver are on</string>
    <string name="aware_footer_when_airplane_on">Motion Sense is unavailable because airplane mode is on</string>
    <string name="aware_footer_when_batterysaver_on">Motion Sense is unavailable because Battery Saver is on</string>
    <string name="aware_gesture_summary_off">Quick Gestures on, Active Edge turned off</string>
    <string name="aware_gesture_summary_on_non_assist">Quick Gestures on, Active Edge turned on</string>
    <string name="aware_gesture_summary_on_with_assist">Quick Gestures on, Active Edge on, squeeze for your Assistant</string>
    <string name="aware_info_button_description">More settings</string>
    <string name="aware_settings_disabled_info_dialog_content" />
    <string name="aware_settings_disabled_info_dialog_title" />
    <string name="aware_settings_enabled_info_dialog_content" />
    <string name="aware_settings_enabled_info_dialog_title" />
    <string name="aware_settings_suggestion_summary" />
    <string name="aware_settings_suggestion_title" />
    <string name="aware_summary_when_airplane_batterysaver_on">Unavailable because airplane mode and Battery Saver are on</string>
    <string name="aware_summary_when_airplane_on">Unavailable because airplane mode is on</string>
    <string name="aware_summary_when_batterysaver_on">Unavailable because Battery Saver is on</string>
    <string name="aware_wake_display_summary" />
    <string name="aware_wake_display_summary_aod_off" />
    <string name="aware_wake_display_title" />
    <string name="backup_data_summary">Back up app data, Wi-Fi passwords, and other settings to Google servers</string>
    <string name="backup_suggestion_cancel">Cancel</string>
    <string name="backup_suggestion_dialog_description">"This will delete all data from your phone's internal storage."</string>
    <string name="backup_suggestion_dialog_title">Reset this device?</string>
    <string name="backup_suggestion_get_started">learn more</string>
    <string name="backup_suggestion_item_summary">Copy from Android or iPhone® device</string>
    <string name="backup_suggestion_item_title">Missing data from old phone?</string>
    <string name="backup_suggestion_missing_description">"If you don't see some of your data, like SMS messages and photos, you can transfer it to your Pixel by using a cable.

To get started, your Pixel needs to be reset. All data on this phone, including customized settings and content not synced to the cloud, will be deleted."</string>
    <string name="backup_suggestion_missing_title">Missing your data?</string>
    <string name="backup_suggestion_next">next</string>
    <string name="backup_suggestion_other_ways_to_copy">Other ways to copy data</string>
    <string name="backup_suggestion_reset_description">"On the next screen, you can reset your Pixel. This is the only way to transfer data using a cable.

Once it resets, go through the setup process and choose to bring your data from your previous phone."</string>
    <string name="backup_suggestion_reset_title">Reset your Pixel</string>
    <string name="backup_suggestion_what_is_needed_summary">"After you reset your phone, you'll need:

• Your previous phone (LINK_BEGINmost phonesLINK_END on Android 5.0+ or iOS® 8.0+ are supported)
• A charging or data cable for your previous phone
• The Quick Switch Adapter that came with your Pixel"</string>
    <string name="backup_suggestion_what_is_needed_title">"What you'll need"</string>
    <string name="battery_manager_summary">Extend battery life and optimize charging</string>
    <string name="battery_manager_summary_unsupported">Extend battery life</string>
    <string name="battery_missing_link_message">Learn more</string>
    <string name="battery_suggestion_summary">Turn on Adaptive Battery</string>
    <string name="battery_tip_limited_temporarily_extra_summary">To protect your battery, charging is paused at %1$s while your tablet is docked</string>
    <string name="battery_tip_smart_battery_summary">Turn on Adaptive Battery</string>
    <string name="bluetooth_untethered_unpair_dialog_body">%1$s will no longer be paired with any device linked to this Google Account</string>
    <string name="clear_calling_footer">"To protect your privacy, Clear Calling does not send audio or conversations to Google.

Clear Calling works on Wi‑Fi calling and most networks, not available for 3G networks."</string>
    <string name="clear_calling_footer_learn_more_link">https://support.google.com/pixelphone?p=clear_calling</string>
    <string name="clear_calling_title">Clear Calling</string>
    <string name="clear_calling_toggle">Use Clear Calling</string>
    <string name="clear_calling_topintro">Reduces background noises during calls</string>
    <string name="columbus_gesture_detected">Quick Tap detected!</string>
    <string name="columbus_gesture_enrollment_complete">Done</string>
    <string name="columbus_gesture_enrollment_do_it_later">Not now</string>
    <string name="columbus_gesture_enrollment_settings">Go to Settings</string>
    <string name="columbus_gesture_enrollment_try_it">Try it</string>
    <string name="columbus_gesture_training_action_no_selection_error">Please select an action to perform</string>
    <string name="basic_battery_saver_summary">Limits visual effects and background activity. Turns on Dark theme, if not already on.</string>
    <string name="basic_battery_saver_title">Standard Battery Saver</string>
    <string name="battery_saver_reminder_category">Reminders</string>
    <string name="battery_saver_reminder_switch_summary">Get reminders when battery is low</string>
    <string name="battery_saver_reminder_switch_title">Battery Saver reminders</string>
    <string name="battery_saver_schedule_category">Schedule</string>
    <string name="battery_saver_schedule_switch_summary">Battery Saver turns on when battery falls to a level you set</string>
    <string name="battery_saver_schedule_switch_title">Turn on based on battery level</string>
    <string name="battery_schedule_summary">Manage when Battery Saver turns on</string>
    <string name="battery_schedule_title">Schedule and reminders</string>
    <string name="columbus_gesture_training_action_text">Select what happens when you use Quick Tap. You can change this later in settings.</string>
    <string name="columbus_gesture_training_action_title">Choose Quick Tap option</string>
    <string name="columbus_gesture_training_enrolling_first_gesture">… Double-tap 1 out of 2 detected</string>
</resources>